--- a/views/register.html
+++ b/views/register.html
@@ -1,37 +1,37 @@
-<h2>This is the register page</h2>
+<div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
+	<form name="registerForm" ng-submit="register()" novalidate>
+		<legend>Sign Up</legend>
 
-<form name="registerForm" ng-submit="register()" novalidate>
-	<legend>Sign Up</legend>
+		<div ng-show="message">{{ message }}</div>
 
-	<div ng-show="message">{{ message }}</div>
+		<div class="form-group">
+			<label for="">First Name</label>
+			<input type="text" class="form-control" name="firstname" placeholder="First Name" 
+			ng-model="user.firstname"
+			ng-required="true">
+		</div>
+		<div class="form-group">
+			<label for="">Last Name</label>
+			<input type="text" class="form-control" name="lastname" placeholder="Last Name" ng-model="user.lastname"
+			ng-required="true">
+		</div>
+		<div class="form-group">
+			<label for="">Email</label>
+			<input type="email" class="form-control" name="email" placeholder="Email" ng-model="user.email"
+			ng-required="true">
+		</div>
+		<div class="form-group">
+			<label for="">Password</label>
+			<input type="password" class="form-control" name="password" placeholder="Password" ng-model="user.password"
+			ng-required="true">
+		</div>
+		<div class="form-group">
+			<label for="">Mobile</label>
+			<input type="text" class="form-control" name="mobile" placeholder="Mobile" ng-model="user.mobile">
+		</div>
 
-	<div class="form-group">
-		<label for="">First Name</label>
-		<input type="text" class="form-control" name="firstname" placeholder="First Name" 
-		ng-model="user.firstname"
-		ng-required="true">
-	</div>
-	<div class="form-group">
-		<label for="">Last Name</label>
-		<input type="text" class="form-control" name="lastname" placeholder="Last Name" ng-model="user.lastname"
-		ng-required="true">
-	</div>
-	<div class="form-group">
-		<label for="">Email</label>
-		<input type="email" class="form-control" name="email" placeholder="Email" ng-model="user.email"
-		ng-required="true">
-	</div>
-	<div class="form-group">
-		<label for="">Password</label>
-		<input type="password" class="form-control" name="password" placeholder="Password" ng-model="user.password"
-		ng-required="true">
-	</div>
-	<div class="form-group">
-		<label for="">Mobile</label>
-		<input type="text" class="form-control" name="mobile" placeholder="Mobile" ng-model="user.mobile">
-	</div>
+		
 
-	
-
-	<button type="submit" class="btn btn-primary" ng-disabled="registerForm.$invalid">Sign Up</button>
-</form>
+		<button type="submit" class="btn btn-primary btn-lg btn-block" ng-disabled="registerForm.$invalid">Sign Up</button>
+	</form>
+</div>
