--- a/views/login.html
+++ b/views/login.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
 	<form name="loginForm" ng-submit="login()" novalidate>
 		<legend>Login to BBall</legend>
-		<div ng-show="message">{{ message }}</div>
+		<div ng-show="message" class="alert alert-danger">{{ message }}</div>
 		<div class="form-group">
 			<label for="">Email</label>
 			<input type="email" class="form-control" name="email" placeholder="Email"
