--- a/views/register.html
+++ b/views/register.html
@@ -2,7 +2,7 @@
 	<form name="registerForm" ng-submit="register()" novalidate>
 		<legend>Sign Up</legend>
 
-		<div ng-show="message">{{ message }}</div>
+		<div ng-show="message" class="alert alert-danger">{{ message }}</div>
 
 		<div class="form-group">
 			<label for="">First Name</label>
