--- a/views/topnav.html
+++ b/views/topnav.html
@@ -15,6 +15,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <!-- <li class="active"><a href="#/">Home <span class="sr-only">(current)</span></a></li> -->
+        <li><a ng-href="#/about">About</a></li>
+        <li><a ng-href="#/contact">Contact</a></li>
         <li ng-hide="currentUser"><a ng-href="#/login">Login</a></li>
         <li ng-show="currentUser"><a ng-href="#/login" ng-click="logout()">Logout</a></li>
         <li ng-hide="currentUser"><a ng-href="#/register">Register</a></li>
