--- a/views/about.html
+++ b/views/about.html
@@ -4,7 +4,7 @@
 			<h3 class="panel-title">About</h3>
 		</div>
 		<div class="panel-body">
-			Panel content
+			We organize open gym play every Thursday from 10pm to midnight.  We play two full games (40 min each) and cap at 16 players each night. The cost for the 2 hrs is $10/person.  If you are interested please contact us at blah@email.com
 		</div>
 	</div>
 </div>
