--- a/views/login.html
+++ b/views/login.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
+<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 	<form name="loginForm" ng-submit="login()" novalidate>
 		<legend>Login to BBall</legend>
 		<div ng-show="message" class="alert alert-danger">{{ message }}</div>
