--- a/views/register.html
+++ b/views/register.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
+<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 	<form name="registerForm" ng-submit="register()" novalidate>
 		<legend>Sign Up</legend>
 
@@ -29,8 +29,6 @@
 			<label for="">Mobile</label>
 			<input type="text" class="form-control" name="mobile" placeholder="Mobile" ng-model="user.mobile">
 		</div>
-
-		
 
 		<button type="submit" class="btn btn-primary btn-lg btn-block" ng-disabled="registerForm.$invalid">Sign Up</button>
 	</form>
