add roster page

--- a/views/dash.html
+++ b/views/dash.html
@@ -21,7 +21,8 @@
 					<td>
 						<button ng-click="checkin(ballnight, currentUser)">Add me</button>
 						<button ng-click="checkout(ballnight, currentUser)">Remove me</button>
-						<button ng-click="roster()">Roster</button>
+						<a href="#/bballnight/{{ ballnight.bball_date}}/roster">View Roster</a>
+
 					</td>
 				</tr>
 			</tbody>
