--- a/views/dash.html
+++ b/views/dash.html
@@ -1,45 +1,40 @@
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-	<h3>Welcome {{ currentUser.first_name }}</h3>
-	<p># of nights is {{ count }}</p>	
+	
 
-
-	<div class="panel panel-info" ng-repeat="(key, ballnight) in data| orderBy: 'bball_date'">
-		<div class="panel-heading">
-			<h2 class="panel-title">
+	<div class="page-header">
+	  <h3>Welcome {{ currentUser.first_name }}</h3>
+	</div>
+	
+	<div class="panel panel-primary" ng-repeat="(key, ballnight) in data| orderBy: 'bball_date'">
+		<div class="panel-heading text-center">
+			<h1 class="panel-title">
 				<span class="badge">{{ ballnight.counter }}</span>
 				{{ ballnight.bball_date | date:  'EEE M/dd/yyyy' }}
-				
-			</h2>
+			</h1>
 		</div>
 		<div class="panel-body">
 			<p>
 				<a href="#/bballnight/{{ ballnight.bball_date}}/roster">Roster:</a>
 			</p>
-			
-				<span class="label label-primary playername" ng-repeat="player in ballnight.roster">
-					{{ player.first_name }} {{ player.last_name }}
-				</span>
+			<ul class="ballerslist">
+				<li ng-repeat="(key,player) in ballnight.roster" >{{ player.first_name }} {{ player.last_name }}</li>
+			</ul>
+
+			<p>
+				<a href="#/bballnight/{{ ballnight.bball_date}}/roster">Waitlist:</a>
+			</p>
+			<ul class="ballerslist">
+				<li ng-repeat="(key,player) in ballnight.waitlist" >{{ player.first_name }} {{ player.last_name }}</li>
+			</ul>
+
 				
 			
 		</div>
 		<div class="panel-footer">
-			
-			
-			<div class="btn-group btn-group-justified" role="group" aria-label="...">
-			  <div class="btn-group" role="group">
-			    <button type="button" class="btn btn-default" ng-click="checkin(ballnight, currentUser)">Add Me</button>
-			  </div>
-			  <div class="btn-group" role="group">
-			    <button type="button" class="btn btn-default" ng-click="checkout(ballnight, currentUser)">Remove Me</button>
-			  </div>
-			  <div class="btn-group" role="group">
-			    <button type="button" class="btn btn-default">Wailist</button>
-			  </div>
-			</div>
+			<button type="button" class="btn btn-primary btn-lg btn-block" ng-click="checkin(ballnight, currentUser)" ng-disabled="ballnight.counter==16">Add Me</button>
+			<button type="button" class="btn btn-danger btn-lg btn-block" ng-click="checkout(ballnight, currentUser)">Remove Me</button>
+	    <button type="button" class="btn btn-warning btn-lg btn-block" ng-click="waitlist(ballnight, currentUser)" ng-disabled="checkwaitlist(ballnight,currentUser)">Waitlist</button>
+			<button type="button" class="btn btn-warning btn-lg btn-block" ng-click="removewaitlist(ballnight, currentUser)">Remove Waitlist</button>
 		</div>
 	</div>
-
 </div>
-<pre>
-{{ data | json }}
-</pre>
