--- a/views/topnav.html
+++ b/views/topnav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" ng-controller="RegistrationController">
+<nav class="navbar navbar-default navbar-fixed-top" ng-controller="RegistrationController">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -15,11 +15,11 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <!-- <li class="active"><a href="#/">Home <span class="sr-only">(current)</span></a></li> -->
-        <li><a ng-href="#/about">About</a></li>
-        <li><a ng-href="#/contact">Contact</a></li>
-        <li ng-hide="currentUser"><a ng-href="#/login">Login</a></li>
-        <li ng-show="currentUser"><a ng-href="#/login" ng-click="logout()">Logout</a></li>
-        <li ng-hide="currentUser"><a ng-href="#/register">Register</a></li>
+        <li><a ng-href="#/about" data-toggle="collapse" data-target=".navbar-collapse">About</a></li>
+        <li><a ng-href="#/contact" data-toggle="collapse" data-target=".navbar-collapse">Contact</a></li>
+        <li ng-hide="currentUser" data-toggle="collapse" data-target=".navbar-collapse"><a ng-href="#/login">Login</a></li>
+        <li ng-show="currentUser" data-toggle="collapse" data-target=".navbar-collapse"><a ng-href="#/login" ng-click="logout()">Logout</a></li>
+        <li ng-hide="currentUser" data-toggle="collapse" data-target=".navbar-collapse"><a ng-href="#/register">Register</a></li>
         
       </ul>
     </div><!-- /.navbar-collapse -->
