--- a/public/views/dash.html
+++ b/public/views/dash.html
@@ -2,39 +2,20 @@
 	
 
 	<div class="page-header">
-	  <h3>Welcome {{ currentUser.first_name }}</h3>
+	  <h3>Welcome {{ currentUser.first_name }} - this is your dash</h3>
 	</div>
 	
-	<div class="panel panel-primary" ng-repeat="(key, ballnight) in data| orderBy: 'bball_date'">
-		<div class="panel-heading text-center">
-			<h1 class="panel-title">
-				<span class="badge">{{ ballnight.counter }}</span>
-				{{ ballnight.bball_date | date:  'EEE M/dd/yyyy' }}
-			</h1>
-		</div>
-		<div class="panel-body">
-			<p>
-				<a href="#/bballnight/{{ ballnight.bball_date}}/roster">Roster:</a>
-			</p>
-			<ul class="ballerslist">
-				<li ng-repeat="(key,player) in ballnight.roster" >{{ player.first_name }} {{ player.last_name }}</li>
-			</ul>
-
-			<p>
-				<a href="#/bballnight/{{ ballnight.bball_date}}/roster">Waitlist:</a>
-			</p>
-			<ul class="ballerslist">
-				<li ng-repeat="(key,player) in ballnight.waitlist" >{{ player.first_name }} {{ player.last_name }}</li>
-			</ul>
-
-				
+	<div class="col-md-2 col-lg-2 col-sm-2 col-xs-3">
+		<div class="row" ng-repeat="ballnight in data">
+			<div class="post">
+				<a ng-href="#/bballnight/{{ ballnight.bball_date }}/roster">
+					<p class="calendar">{{ ballnight.bball_date | date:  'dd' }}<em>{{ ballnight.bball_date | date:  'MMMM' }}</em></p>
+				</a>
+			</div>
 			
 		</div>
-		<div class="panel-footer">
-			<button type="button" class="btn btn-primary btn-lg btn-block" ng-click="checkin(ballnight, currentUser)" ng-disabled="ballnight.counter==16">Add Me</button>
-			<button type="button" class="btn btn-danger btn-lg btn-block" ng-click="checkout(ballnight, currentUser)">Remove Me</button>
-	    <button type="button" class="btn btn-warning btn-lg btn-block" ng-click="waitlist(ballnight, currentUser)" ng-disabled="checkwaitlist(ballnight,currentUser)">Waitlist</button>
-			<button type="button" class="btn btn-warning btn-lg btn-block" ng-click="removewaitlist(ballnight, currentUser)">Remove Waitlist</button>
-		</div>
-	</div>
+		
+	</div>	
+
+
 </div>
