--- a/public/views/dash.html
+++ b/public/views/dash.html
@@ -1,21 +1,21 @@
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-	
+<div class="page-header">
+  <h3>Welcome {{ currentUser.first_name }} - this is your dash</h3>
+</div>
 
-	<div class="page-header">
-	  <h3>Welcome {{ currentUser.first_name }} - this is your dash</h3>
+
+<div class="row" ng-repeat="ballnight in data">
+	<div class="col-md-2">
+		<div class="post">
+			<a ng-href="#/bballnight/{{ ballnight.bball_date }}/roster">
+				<p class="calendar">{{ ballnight.bball_date | date:  'dd' }}<em>{{ ballnight.bball_date | date:  'MMMM' }}</em></p>
+			</a>
+		</div>	
 	</div>
-	
-	<div class="col-md-2 col-lg-2 col-sm-2 col-xs-3">
-		<div class="row" ng-repeat="ballnight in data">
-			<div class="post">
-				<a ng-href="#/bballnight/{{ ballnight.bball_date }}/roster">
-					<p class="calendar">{{ ballnight.bball_date | date:  'dd' }}<em>{{ ballnight.bball_date | date:  'MMMM' }}</em></p>
-				</a>
-			</div>
-			
-		</div>
-		
-	</div>	
+	<div class="col-md-10" ng-controller="BallNightDetailController">
+		Roster: {{ rostercount }}
+		Waitlist: {{ waitlistcount}}
 
+		<span class="label label-primary" ng-repeat="player in rosterlist | orderBy: 'date'">{{ player.first_name }} {{ player.last_name }}</span>
 
+	</div>		
 </div>
